force-app/main/default/objects/Rve_Exam_Notification__c/Rve_Exam_Notification__c.object-meta.xml
<CustomObject>
    <label>REVA Exam Notification</label>
    <nameField>
        <label>Exam Notification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>REVA Exam Notifications</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>