force-app/main/default/objects/Rve_Exam_Notification__c/fields/hed_IA_Type__c.field-meta.xml
<CustomField>
    <fullName>hed_IA_Type__c</fullName>
    <label>IA Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IA 1</fullName>
            </value>
            <value>
                <fullName>IA 2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>