force-app/main/default/objects/Rve_Exam_Notification__c/fields/hed_Program_Batch__c.field-meta.xml
<CustomField>
    <fullName>hed_Program_Batch__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program Batch</label>
    <referenceTo>hed__Program_Plan__c</referenceTo>
    <relationshipLabel>Reva Exam Notifications</relationshipLabel>
    <relationshipName>Reva_Exam_Notifications</relationshipName>
    <type>Lookup</type>
</CustomField>