force-app/main/default/objects/Rve_Exam_Notification__c/fields/Logisys_TimeTable_fetch_Date__c.field-meta.xml
<CustomField>
    <fullName>Logisys_TimeTable_fetch_Date__c</fullName>
    <formula>Rve_Semester__r.Exam_Start_Date__c -5</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Logisys TimeTable fetch Date</label>
    <type>Date</type>
</CustomField>