force-app/main/default/objects/Rve_Exam_Notification__c/fields/rve_Active__c.field-meta.xml
<CustomField>
    <fullName>rve_Active__c</fullName>
    <formula>IF(
    AND(
        rve_Exam_Start_Date__c &gt;= TODAY(),
        rve_Exam_Start_Date__c &lt;= (TODAY() + 4)
    ),
    true,
    IF(
        TODAY() &lt;= Rve_End_Date__c,
        true,
        false
    )
)</formula>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>