force-app/main/default/objects/Rve_Exam_Notification__c/fields/Rve_Course__c.field-meta.xml
<CustomField>
    <fullName>Rve_Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>hed__Course__c</referenceTo>
    <relationshipName>Reva_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>