force-app/main/default/objects/Rve_Exam_Notification__c/fields/Rve_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Rve_End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>