force-app/main/default/objects/Rve_Exam_Notification__c/fields/rve_Exam_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>rve_Exam_Start_Date__c</fullName>
    <label>Exam Start Date</label>
    <type>Date</type>
</CustomField>