force-app/main/default/objects/Rve_Exam_Notification__c/fields/Rve_Late_Fee__c.field-meta.xml
<CustomField>
    <fullName>Rve_Late_Fee__c</fullName>
    <label>Late Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>