force-app/main/default/objects/Rve_Exam_Notification__c/fields/Rve_Publish__c.field-meta.xml
<CustomField>
    <fullName>Rve_Publish__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Publish</label>
    <type>Checkbox</type>
</CustomField>