force-app/main/default/objects/Rve_Exam_Notification__c/fields/Rve_Semester__c.field-meta.xml
<CustomField>
    <fullName>Rve_Semester__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Semester</label>
    <referenceTo>hed__Term__c</referenceTo>
    <relationshipName>Reva_Exams</relationshipName>
    <type>Lookup</type>
</CustomField>