force-app/main/default/objects/Rve_Exam_Notification__c/fields/Rve_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Rve_Start_Date__c</fullName>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>