force-app/main/default/objects/Rve_Exam_Notification__c/recordTypes/hed_IA_Notification.recordType-meta.xml
<RecordType>
    <fullName>hed_IA_Notification</fullName>
    <active>true</active>
    <label>IA Notification</label>
</RecordType>