force-app/main/default/objects/Rve_Exam_Notification__c/recordTypes/hed_Semester_Notification.recordType-meta.xml
<RecordType>
    <fullName>hed_Semester_Notification</fullName>
    <active>true</active>
    <label>Semester Notification</label>
</RecordType>