force-app/main/default/objects/Rve_Exam_Notification__c/validationRules/Exam_End_date_should_not_be_a_start_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Exam_End_date_should_not_be_a_start_date</fullName>
    <active>false</active>
    <errorConditionFormula>Rve_End_Date__c  &lt;  rve_Exam_Start_Date__c</errorConditionFormula>
    <errorDisplayField>Rve_End_Date__c</errorDisplayField>
    <errorMessage>The end date cannot be earlier than the start date. Please select a valid end date</errorMessage>
</ValidationRule>