force-app/main/default/objects/Rve_Exam_Notification__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Rve_Publish__c</columns>
    <columns>rve_Active__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>RECORDTYPE</columns>
    <columns>hed_IA_Type__c</columns>
    <columns>rve_Exam_Start_Date__c</columns>
    <columns>Rve_End_Date__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>